# routes/contacts.js
@@ -1,10 +1,11 @@
 const router = require('express').Router();
 const contactsController = require('../frontend/controllers/contacts');
+const requireAuth = require('../middleware/isAuthenticated');
 
 router.get('/', contactsController.getAll);
 router.get('/:id', contactsController.getSingle);
-router.post('/', contactsController.createContact);
-router.put('/:id', contactsController.updateContact);
-router.delete('/:id', contactsController.deleteContact);
+router.post('/', requireAuth, contactsController.createContact);
+router.put('/:id', requireAuth, contactsController.updateContact);
+router.delete('/:id', requireAuth, contactsController.deleteContact);
 
 module.exports = router;
